--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@ html, body{
     margin:0;
     padding:0;
 }
-#sticky {
+#the-sticky-div.sticky {
    position: fixed;
    top: 0;
 }
@@ -18,16 +18,6 @@ html, body{
      position: relative;
      /*background: #f00;*/
      overflow: auto;
-}
-.Link{
-    display: block;
-}
-.active{
-    background-color: #ccc
-}
-.stick{
-    position: fixed !important;
-    top:0 !important;
 }
 /*#sidebar-width{
     width: 256px;
